Changes from jTDS 1.3.0
=======================

03/08/2013 - Holger Rehn
 o Improved fix for bug #694, the previous attempt wasn't sufficient.

03/07/2013 - Holger Rehn
 o Applied fix for bug #695 provided by Keith Robinson.
 o Fixed bug #694, jTDS logger may cause an NPE. 

02/24/2013 - Holger Rehn
 o Fixed bug #508, the driver ignored unspecified server errors signaled by a
   TDS DONE token if no ERROR token has been received before.

02/18/2013 - Holger Rehn
 o Fixed bug #682, error when using date/time escapes in a procedure call.

01/25/2013 - Holger Rehn
 o Added test for JDBC date/time escapes used in a procedure call.

12/24/2012 - Holger Rehn
 o Added test for bug #686, SQL error invalidates a Statement's internal state.
 o Fixed bug #626 by added a type mapping for java.math.BigInteger.

12/19/2012 - Holger Rehn
 o Applied fix for MSSQL 2000 compatibility provided by Andrew Fink (bug #683).

11/15/2012 - Holger Rehn
 o Fixed bug #552, jTDS fails to find an SQL Server instance if the discovery
   requests' response is plit into multiple network packets.

10/28/2012 - Holger Rehn
 o Added test for bug #575, parameter types not available via ParameterMetaData.
 o Fixed build script, Maven artifacts are no included in the distro package.

===============================================================================
10/27/2012 - jTDS 1.3.0 released
===============================================================================

Changes from jTDS 1.2.6
=======================

10/26/2012 - Holger Rehn
 o Added test for bug #638, preparedStatement.setTimestamp sets seconds to 0.
 o Added test for bug #644, updateNull not working with MSSQL DECIMAL field.
 o Added test for bug #500, Statement.execute() fails if using cursors and
   SHOWPLAN_ALL is set to ON.
 o Fixed bug #528, any ResultSet gets dropped when using RETURN_GENERATED_KEYS.
 o A ResultSet returned by Statement.getGeneratedKeys() is no longer updatable.

10/25/2012 - Holger Rehn