@@ -125,6 +125,8 @@ public final class DefaultProperties {
     public static final String USELOBS = "true";
     /** Default <code>useNTLMv2</code> property. */
     public static final String USENTLMV2 = "false";
+    /** Default <code>useKerberos</code> property. */
+    public static final String USEKERBEROS = "false";
     /** Default <code>user</code> property. */
     public static final String USER = "";
     /** Default <code>wsid</code> property. */
@@ -249,6 +251,7 @@ public final class DefaultProperties {
         addDefaultPropertyIfNotSet(props, Driver.SSL, SSL);
         addDefaultPropertyIfNotSet(props, Driver.USECURSORS, USECURSORS);
         addDefaultPropertyIfNotSet(props, Driver.USENTLMV2, USENTLMV2);
+        addDefaultPropertyIfNotSet(props, Driver.USEKERBEROS, USEKERBEROS);
         addDefaultPropertyIfNotSet(props, Driver.BUFFERMAXMEMORY, BUFFER_MAX_MEMORY);
         addDefaultPropertyIfNotSet(props, Driver.BUFFERMINPACKETS, BUFFER_MIN_PACKETS);
         addDefaultPropertyIfNotSet(props, Driver.USELOBS, USELOBS);
