@@ -39,6 +39,7 @@ prop.useunicode=SENDSTRINGPARAMETERSASUNICODE
 prop.wsid=WSID
 prop.xaemulation=XAEMULATION
 prop.usentlmv2=USENTLMV2
+prop.usekerberos=USEKERBEROS
 
 prop.desc.appname=The application name advertised by the driver.
 prop.desc.autocommit=Set the autocommit mode of newly created connections.
@@ -81,6 +82,7 @@ prop.desc.useunicode=If strings should be sent as unicode values.
 prop.desc.wsid=Workstation ID or client host name override. Will be stored in master.dbo.sysprocesses, column hostname.
 prop.desc.xaemulation=Set to false to use the Microsoft Distributed Transaction Coordinator.
 prop.desc.usentlmv2=Set to true to send LMv2/NTLMv2 responses when using Windows authentication
+prop.desc.usekerberos=Set to true to use Kerberos as the authentication mechanism.|N|true,false
 
 error.baddatatype=The TDS protocol does not support JDBC datatype {0}.
 error.baddbname=The database name ''{0}'' is invalid.
@@ -103,7 +105,7 @@ error.charset.nomapping=Could not find a Java charset equivalent to DB charset {
 error.charset.nocollation=Could not find a Java charset equivalent to collation {0}.
 error.chartoolong=Sybase does not support char parameters > 255 bytes.
 error.clob.searchnull=The search string must not be null.
-error.clob.strnull=The string value myst not be null.
+error.clob.strnull=The string value must not be null.
 error.connection.badhost=Unknown server host name ''{0}''.
 error.connection.badprop=The {0} connection property is invalid.
 error.connection.badsavep=Savepoint is not valid for this transaction.
@@ -116,7 +118,6 @@ error.connection.savenorollback=Savepoints cannot be rolled back in auto-commit 
 error.connection.savenoset=Savepoints cannot be set in auto-commit mode.
 error.connection.savenullname=Savepoint name cannot be null.
 error.connection.servertype=The value of the serverType property is invalid: {0}
-error.connection.sso=Single-Sign-On is only supported on Windows. Please specify a user name.
 error.connection.timeout=Login timed out.
 error.conproxy.noconn=Connection has been returned to pool and this reference is no longer valid.
 error.convert.numericoverflow=Numeric overflow in conversion of value {0} to {1}.
