@@ -1,6 +1,9 @@
 Changes from jTDS 1.3.0
 =======================
 
+03/18/2013 - Holger Rehn
+ o Backported Kerberos support from jTDS 2.0.
+
 03/08/2013 - Holger Rehn
  o Improved fix for bug #694, the previous attempt wasn't sufficient.
 
@@ -27,7 +30,7 @@ Changes from jTDS 1.3.0
 
 11/15/2012 - Holger Rehn
  o Fixed bug #552, jTDS fails to find an SQL Server instance if the discovery
-   requests' response is plit into multiple network packets.
+   requests' response is split into multiple network packets.
 
 10/28/2012 - Holger Rehn
  o Added test for bug #575, parameter types not available via ParameterMetaData.
